--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="fa">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>نامه</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- animate__animated -->
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>نامه</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-  <div id="container">
-    <canvas id="particleCanvas"></canvas>
-  </div>
-
-  <main>
-    <div class="playlist-wrapper fa">
-      <h1>به نام خدا</h1>
-      <hr />
-      <p>
-        سلام و عرض ادب... <br/>
-        من علیرضا دانشجو و شاغل ( برنامه نویس ) متولد بهمن ۷۸ هستم . <br/>
-        اگر مایلید برای آشنایی شما رو به نوشیدنی دعوت کنم ...
-        <br/>
-        <br/>
-        اگه گفتین کجا میخوام دعوتتون کنم ؟!
-      </p>
+  <body>
+    <div id="container">
+      <canvas id="particleCanvas"></canvas>
     </div>
-  </main>
 
-  <script src="jquery.js"></script>
-  <script src="app.js"></script>
-</body>
+    <main>
+      <div class="playlist-wrapper fa">
+        <h1 class="animate__animated animate__fadeInDownBig">به نام خدا</h1>
+        <hr class="animate__animated animate__fadeInRightBig" />
+        <br />
+        <p class="animate__animated animate__fadeInRightBig">
+          سلام و عرض ادب... <br />
+          <br />
+          من علیرضا دانشجو و شاغل ( برنامه نویس ) متولد بهمن ۷۸ هستم . <br />
+          من از شما خوشم اومده ، اگر مایلید برای آشنایی شما رو به نوشیدنی دعوت
+          کنم ...
+          <br />
+        </p>
+        <div class="wt en animate__animated animate__fadeInLeftBig">
+          <a
+            href="whatsapp:contact=015555555555@s.whatsapp.com&message=I'd like to chat with you"
+            >09910343345</a
+          >
+        </div>
+      </div>
+    </main>
 
+    <script src="jquery.js"></script>
+    <script src="app.js"></script>
+  </body>
 </html>
