--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </p>
         <div class="wt en animate__animated animate__fadeInLeftBig">
           <a
-            href="whatsapp:contact=+989910343345@s.whatsapp.com&message=I'd like to chat with you"
+            href="https://wa.me/+989910343345?text=I'm%20interested%20you"
+            target="_blank"
             >09910343345</a
           >
         </div>
