--- a/index.html
+++ b/index.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html lang="fa">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="cache-control" content="max-age=0" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
-    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-    <meta http-equiv="pragma" content="no-cache" />
 
-    <title>نامه</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <!-- animate__animated -->
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="cache-control" content="max-age=0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+  <meta http-equiv="pragma" content="no-cache" />
 
-  <body>
-    <div id="container">
-      <canvas id="particleCanvas"></canvas>
-    </div>
+  <title>نامه</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- animate__animated -->
+</head>
 
-    <main>
-      <div class="playlist-wrapper fa">
-        <h1 class="animate__animated animate__fadeInDownBig">به نام خدا</h1>
-        <hr class="animate__animated animate__fadeInRightBig" />
+<body>
+  <div id="container">
+    <canvas id="particleCanvas"></canvas>
+  </div>
+
+  <main>
+    <div class="playlist-wrapper fa">
+      <h3 class="animate__animated animate__fadeInDownBig header">
+        بسم الله الرحمن الرحيم
+      </h3>
+      <hr class="animate__animated animate__fadeInRightBig" />
+      <br />
+      <p class="animate__animated animate__fadeInRightBig">
+        با نام و یاد خدا، سلام و عرض ادب... <br />
         <br />
-        <p class="animate__animated animate__fadeInRightBig">
-          سلام و عرض ادب... <br />
-          <br />
-          من علیرضا دانشجو و شاغل ( برنامه نویس ) متولد بهمن ۷۸ هستم . <br />
-          من از شما خوشم اومده ، اگر مایلید برای آشنایی شما رو به نوشیدنی دعوت
-          کنم ...
-          <br />
-        </p>
-        <div class="wt en animate__animated animate__fadeInLeftBig">
-          <a
-            href="https://wa.me/+989910343345?text=I'm%20interested%20you"
-            target="_blank"
-            >09910343345</a
-          >
-        </div>
+        من علیرضا دانشجو و شاغل ( برنامه نویس ) متولد بهمن ۷۸ هستم . <br />
+        من از شما خوشم اومده ، اگر مایلید باشید برای آشنایی شما رو به نوشیدنی دعوت
+        کنم ...
+        <br />
+        <br />
+      </p>
+      <p class="animate__animated animate__fadeInLeftBig">
+        میبخشید اینقدر بی مقدمه گفتم ،راه مناسبتری به ذهنم نرسید. &#128563
+      </p>
+      <div class="wt en animate__animated animate__fadeInLeftBig">
+        <a href="https://wa.me/+989910343345?text=I'm%20interested%20you" target="_blank">09910343345</a>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <script src="jquery.js"></script>
-    <script src="app.js"></script>
-  </body>
+  <script src="jquery.js"></script>
+  <script src="app.js"></script>
+</body>
+
 </html>
